[package]
name = "library_management_system"
version = "0.1.0"
authors = ["Emmanuel Antony <emmanuelantony2000@gmail.com>"]
edition = "2018"

[dependencies]
simplebase = "*"
rocket = "*"
rocket_codegen = "*"
rocket_contrib = "*"
chrono = "*"
time = "*"
rust-crypto = "*"
rocket-include-static-resources = "*"
include_dir = "*"